feat: add next_return_from_date(day) and deprecate old functions

--- a/release_notes/v5.0.0.md
+++ b/release_notes/v5.0.0.md
@@ -3,51 +3,59 @@
 > **The fifth major version of Kerykeion is ready**: a ground-up redesign that separates computation, data, and rendering, introduces a coherent ecosystem of factories and Pydantic models, and brings SVG chart generation to a new level of quality.
 
 ## Executive summary
-- **Modernised pipeline**: everything now revolves around `AstrologicalSubjectFactory`, `ChartDataFactory`, and `ChartDrawer`, with strongly typed models in `kerykeion.schemas`.
-- **Deeper analysis**: a unified aspects engine, full planetary return workflow, house comparison, and transit time ranges arrive as first-class citizens.
-- **Documentation and tooling**: modular docs in `site-docs/`, snippet verification via `scripts/test_markdown_snippets.py`, and runnable examples in `examples/`.
-- **Guided compatibility**: the `kerykeion.backword` module keeps the legacy classes alive with deprecation warnings for a gradual migration from v4.
+
+-   **Modernised pipeline**: everything now revolves around `AstrologicalSubjectFactory`, `ChartDataFactory`, and `ChartDrawer`, with strongly typed models in `kerykeion.schemas`.
+-   **Deeper analysis**: a unified aspects engine, full planetary return workflow, house comparison, and transit time ranges arrive as first-class citizens.
+-   **Documentation and tooling**: modular docs in `site-docs/`, snippet verification via `scripts/test_markdown_snippets.py`, and runnable examples in `examples/`.
+-   **Guided compatibility**: the `kerykeion.backword` module keeps the legacy classes alive with deprecation warnings for a gradual migration from v4.
 
 ## Headline features
+
 ### Factory-centred architecture
-- New `kerykeion.astrological_subject_factory` replaces the old `AstrologicalSubject` class and handles **tropical/sidereal zodiacs, multiple house systems, geocentric/heliocentric/topocentric perspectives, cached GeoNames lookup**, and active point preselection.
-- All data now lives in `kerykeion.schemas`: Pydantic 2 models (`AstrologicalSubjectModel`, `ChartDataModel`, `SingleChartAspectsModel`, `DualChartAspectsModel`, `PlanetReturnModel`, etc.) with literals consolidated in `kr_literals`.
-- The models are subscriptable and serialisable; every API returns coherent structures designed for AI integrations, web apps, and CLIs.
+
+-   New `kerykeion.astrological_subject_factory` replaces the old `AstrologicalSubject` class and handles **tropical/sidereal zodiacs, multiple house systems, geocentric/heliocentric/topocentric perspectives, cached GeoNames lookup**, and active point preselection.
+-   All data now lives in `kerykeion.schemas`: Pydantic 2 models (`AstrologicalSubjectModel`, `ChartDataModel`, `SingleChartAspectsModel`, `DualChartAspectsModel`, `PlanetReturnModel`, etc.) with literals consolidated in `kr_literals`.
+-   The models are subscriptable and serialisable; every API returns coherent structures designed for AI integrations, web apps, and CLIs.
 
 ### Next-generation chart renderer
-- `ChartDataFactory` produces data enriched with **element/quality distributions, relationship scores, house comparison**, and convenience helpers for each chart type (natal, synastry, transit, composite, returns).
-- `ChartDrawer` now focuses solely on SVG rendering: it supports minification, CSS inlining, and wheel/aspect-only exports (`save_svg`, `save_wheel_only_svg_file`, `save_aspect_grid_only_svg_file`).
-- Visual assets were refreshed with updated themes (`classic`, `dark`, `dark-high-contrast`, `light`, `strawberry`), polished XML templates, and a refreshed fixed stars dataset (`sweph/sefstars.txt`).
-- A brand-new Black & White theme renders glyphs, rings, and aspects in solid black, making natal charts printer-friendly on monochrome devices.
+
+-   `ChartDataFactory` produces data enriched with **element/quality distributions, relationship scores, house comparison**, and convenience helpers for each chart type (natal, synastry, transit, composite, returns).
+-   `ChartDrawer` now focuses solely on SVG rendering: it supports minification, CSS inlining, and wheel/aspect-only exports (`save_svg`, `save_wheel_only_svg_file`, `save_aspect_grid_only_svg_file`).
+-   Visual assets were refreshed with updated themes (`classic`, `dark`, `dark-high-contrast`, `light`, `strawberry`), polished XML templates, and a refreshed fixed stars dataset (`sweph/sefstars.txt`).
+-   A brand-new Black & White theme renders glyphs, rings, and aspects in solid black, making natal charts printer-friendly on monochrome devices.
 
 ### Upgraded astrological analysis
-- `AspectsFactory` unifies single- and dual-chart aspects, keeps legacy aliases (`NatalAspectsModel`, `SynastryAspectsModel`) for compatibility, and introduces the `axis_orb_limit` keyword to optionally reintroduce traditional axis orbs while defaulting to modern practice (axes share the same orb as planets).
-- `HouseComparisonFactory`, `RelationshipScoreFactory`, and the new `ChartDataFactory` integrate house overlays, affinity scoring, and elemental statistics.
-- `PlanetaryReturnFactory` computes Solar and Lunar returns via Swiss Ephemeris (methods `next_return_from_year`, `next_return_from_month_and_year`, `next_return_from_iso_formatted_time`).
-- `EphemerisDataFactory` + `TransitsTimeRangeFactory` build subject time series and transit snapshots with safeguards on step size and range.
-- Element and modality distributions now default to a curated weighted map (Sun/Moon/Asc = 2.0, angles 1.5, personal planets 1.5, social planets 1.0, outers 0.5, etc.) and expose `distribution_method`/`custom_distribution_weights` hooks for equal counts or bespoke weighting across single and dual charts.
+
+-   `AspectsFactory` unifies single- and dual-chart aspects, keeps legacy aliases (`NatalAspectsModel`, `SynastryAspectsModel`) for compatibility, and introduces the `axis_orb_limit` keyword to optionally reintroduce traditional axis orbs while defaulting to modern practice (axes share the same orb as planets).
+-   `HouseComparisonFactory`, `RelationshipScoreFactory`, and the new `ChartDataFactory` integrate house overlays, affinity scoring, and elemental statistics.
+-   `PlanetaryReturnFactory` computes Solar and Lunar returns via Swiss Ephemeris (main method: `next_return_from_date`, plus `next_return_from_iso_formatted_time`).
+-   `EphemerisDataFactory` + `TransitsTimeRangeFactory` build subject time series and transit snapshots with safeguards on step size and range.
+-   Element and modality distributions now default to a curated weighted map (Sun/Moon/Asc = 2.0, angles 1.5, personal planets 1.5, social planets 1.0, outers 0.5, etc.) and expose `distribution_method`/`custom_distribution_weights` hooks for equal counts or bespoke weighting across single and dual charts.
 
 ### Documentation, examples, and tooling
-- Documentation has been rewritten in `site-docs/*.md`, with each factory owning a detailed guide and example outputs.
-- `scripts/test_markdown_snippets.py` validates documentation snippets.
-- The `examples/` folder now ships runnable scripts (see *Quickstart examples* below) aligned with the docs.
-- Development guides (`DEVELOPMENT.md`, `IMPROVE.md`) have been updated with the modern workflow.
+
+-   Documentation has been rewritten in `site-docs/*.md`, with each factory owning a detailed guide and example outputs.
+-   `scripts/test_markdown_snippets.py` validates documentation snippets.
+-   The `examples/` folder now ships runnable scripts (see _Quickstart examples_ below) aligned with the docs.
+-   Development guides (`DEVELOPMENT.md`, `IMPROVE.md`) have been updated with the modern workflow.
 
 ## Compatibility & migration from v4
-- Import directly from the package root (`from kerykeion import AstrologicalSubjectFactory, ChartDataFactory, ChartDrawer, ...`).
-- `kerykeion.backword` provides deprecated wrappers (`AstrologicalSubject`, `KerykeionChartSVG`, `NatalAspects`, `SynastryAspects`) so existing code keeps running while pointing to the new APIs.
-- `kr_types` module path still works but shows deprecation warnings; update to `kerykeion.schemas`.
-- Type aliases `Planet` and `AxialCusps` unified as `AstrologicalPoint`; legacy aliases available in v5 without warnings when imported from `schemas`.
-- Backward compatibility layer (`kr_types` module and legacy wrappers) will be **removed in v6.0**.
-- Relationship scoring now lives in `RelationshipScoreFactory` and the models returned by `ChartDataFactory`.
-- Regeneration scripts (`scripts/regenerate_*`) realign fixtures and custom SVG assets with the new pipeline.
+
+-   Import directly from the package root (`from kerykeion import AstrologicalSubjectFactory, ChartDataFactory, ChartDrawer, ...`).
+-   `kerykeion.backword` provides deprecated wrappers (`AstrologicalSubject`, `KerykeionChartSVG`, `NatalAspects`, `SynastryAspects`) so existing code keeps running while pointing to the new APIs.
+-   `kr_types` module path still works but shows deprecation warnings; update to `kerykeion.schemas`.
+-   Type aliases `Planet` and `AxialCusps` unified as `AstrologicalPoint`; legacy aliases available in v5 without warnings when imported from `schemas`.
+-   Backward compatibility layer (`kr_types` module and legacy wrappers) will be **removed in v6.0**.
+-   Relationship scoring now lives in `RelationshipScoreFactory` and the models returned by `ChartDataFactory`.
+-   Regeneration scripts (`scripts/regenerate_*`) realign fixtures and custom SVG assets with the new pipeline.
 
 ## Breaking changes
-- Legacy classes (`AstrologicalSubject`, `NatalAspects`, `SynastryAspects`, `KerykeionChartSVG`, `relationship_score`, `transits_time_range`, `ephemeris_data`) have been removed in favour of their factory-based counterparts.
-- `kerykeion/enums.py`, the entire `kr_types/` tree, and scattered config files were removed; everything is now centralised in `schemas` and `settings`.
-- Packaging migrated from Poetry to PEP 621 + Hatchling (`pyproject.toml`), with dependency locking handled via `uv.lock` and dependency groups.
-- `DEFAULT_ACTIVE_POINTS` and `DEFAULT_ACTIVE_ASPECTS` are more restrictive; chart axes no longer have a forced 1° orb—use the new `axis_orb_limit` keyword argument when you need a traditional axis threshold.
-- **Lunar nodes naming**: All lunar node-related fields have been renamed for clarity (see Migration Guide below).
+
+-   Legacy classes (`AstrologicalSubject`, `NatalAspects`, `SynastryAspects`, `KerykeionChartSVG`, `relationship_score`, `transits_time_range`, `ephemeris_data`) have been removed in favour of their factory-based counterparts.
+-   `kerykeion/enums.py`, the entire `kr_types/` tree, and scattered config files were removed; everything is now centralised in `schemas` and `settings`.
+-   Packaging migrated from Poetry to PEP 621 + Hatchling (`pyproject.toml`), with dependency locking handled via `uv.lock` and dependency groups.
+-   `DEFAULT_ACTIVE_POINTS` and `DEFAULT_ACTIVE_ASPECTS` are more restrictive; chart axes no longer have a forced 1° orb—use the new `axis_orb_limit` keyword argument when you need a traditional axis threshold.
+-   **Lunar nodes naming**: All lunar node-related fields have been renamed for clarity (see Migration Guide below).
 
 ## Migration Guide: Lunar Nodes Naming
 
@@ -55,25 +63,27 @@
 
 In version 5.0, we have renamed all lunar node-related fields and constants to be more explicit and consistent:
 
-| Old Name (v4.x) | New Name (v5.0) |
-|-----------------|-----------------|
-| `Mean_Node` | `Mean_North_Lunar_Node` |
-| `True_Node` | `True_North_Lunar_Node` |
+| Old Name (v4.x)   | New Name (v5.0)         |
+| ----------------- | ----------------------- |
+| `Mean_Node`       | `Mean_North_Lunar_Node` |
+| `True_Node`       | `True_North_Lunar_Node` |
 | `Mean_South_Node` | `Mean_South_Lunar_Node` |
 | `True_South_Node` | `True_South_Lunar_Node` |
 
 ### Why This Change?
 
 The previous naming was ambiguous:
-- `Mean_Node` and `True_Node` didn't specify they were **North** nodes
-- This caused confusion when working with both North and South nodes
-- The new names are self-documenting and follow astrological conventions
+
+-   `Mean_Node` and `True_Node` didn't specify they were **North** nodes
+-   This caused confusion when working with both North and South nodes
+-   The new names are self-documenting and follow astrological conventions
 
 ### Migration Steps
 
 #### 1. Update Model Field Access
 
 **Old Code:**
+
 ```python
 from kerykeion import AstrologicalSubjectFactory
 
@@ -89,6 +99,7 @@ print(subject.true_south_node)
 ```
 
 **New Code:**
+
 ```python
 from kerykeion import AstrologicalSubjectFactory
 
@@ -106,6 +117,7 @@ print(subject.true_south_lunar_node)
 #### 2. Update Active Points Lists
 
 **Old Code:**
+
 ```python
 from kerykeion import AstrologicalSubjectFactory
 
@@ -121,6 +133,7 @@ subject = AstrologicalSubjectFactory.from_birth_data(
 ```
 
 **New Code:**
+
 ```python
 from kerykeion import AstrologicalSubjectFactory
 
@@ -139,6 +152,7 @@ subject = AstrologicalSubjectFactory.from_birth_data(
 #### 3. Update Type Hints and Literals
 
 **Old Code:**
+
 ```python
 from kerykeion.schemas.kr_literals import AstrologicalPoint
 from typing import List
@@ -148,6 +162,7 @@ def get_nodes(subject) -> List[AstrologicalPoint]:
 ```
 
 **New Code:**
+
 ```python
 from kerykeion.schemas.kr_literals import AstrologicalPoint
 from typing import List
@@ -229,6 +244,7 @@ pytest tests/
 ```
 
 If you encounter any issues, please:
+
 1. Check that all lunar node references have been updated
 2. Verify custom configuration files use new names
 3. Update any saved/cached data structures that reference nodes
@@ -236,17 +252,20 @@ If you encounter any issues, please:
 ### Need Help?
 
 If you encounter migration issues:
-- Check the [GitHub Discussions](https://github.com/g-battaglia/kerykeion/discussions)
-- Open an issue on [GitHub](https://github.com/g-battaglia/kerykeion/issues)
-- Review the updated documentation at [kerykeion.readthedocs.io](https://kerykeion.readthedocs.io)
+
+-   Check the [GitHub Discussions](https://github.com/g-battaglia/kerykeion/discussions)
+-   Open an issue on [GitHub](https://github.com/g-battaglia/kerykeion/issues)
+-   Review the updated documentation at [kerykeion.readthedocs.io](https://kerykeion.readthedocs.io)
 
 ## Other notable changes
-- `kerykeion/settings` consolidates chart presets in `settings/chart_defaults.py` and caches configuration merges via `functools.lru_cache`.
-- `utilities.py` now hosts helpers for distributing percentages, inlining CSS, computing element/quality stats, and normalising active points.
-- Test datasets and fixtures were regenerated (new reference SVGs, updated expected aspects, complete factory coverage).
-- README and CHANGELOG received a full rewrite with Pydantic 2 examples, theming guidance, and LLM integration notes.
+
+-   `kerykeion/settings` consolidates chart presets in `settings/chart_defaults.py` and caches configuration merges via `functools.lru_cache`.
+-   `utilities.py` now hosts helpers for distributing percentages, inlining CSS, computing element/quality stats, and normalising active points.
+-   Test datasets and fixtures were regenerated (new reference SVGs, updated expected aspects, complete factory coverage).
+-   README and CHANGELOG received a full rewrite with Pydantic 2 examples, theming guidance, and LLM integration notes.
 
 ## Quickstart examples (verified)
+
 Each snippet lives in `examples/` and was executed while preparing the release.
 
 ```python
@@ -479,17 +498,20 @@ if __name__ == "__main__":
 ```
 
 ## Tooling for developers
-- New CLI scripts (`scripts/regenerate_expected_aspects.py`, `scripts/regenerate_test_charts.py`, `scripts/regenerate_synastry_*.py`) keep fixtures and outputs aligned with the latest algorithms.
-- `scripts/test_markdown_snippets.py` integrates Markdown snippet verification into CI.
-- The `tests/` folder now includes complete coverage for every factory and the compatibility layer (`tests/test_backword.py`).
+
+-   New CLI scripts (`scripts/regenerate_expected_aspects.py`, `scripts/regenerate_test_charts.py`, `scripts/regenerate_synastry_*.py`) keep fixtures and outputs aligned with the latest algorithms.
+-   `scripts/test_markdown_snippets.py` integrates Markdown snippet verification into CI.
+-   The `tests/` folder now includes complete coverage for every factory and the compatibility layer (`tests/test_backword.py`).
 
 ## Quality & verification
-- The whole test suite targets pytest 8.x with `--cov`; regenerated SVG snapshots and aspect fixtures reflect the tighter orb defaults.
-- All `examples/` scripts were executed while drafting these notes to ensure the published documentation remains runnable.
+
+-   The whole test suite targets pytest 8.x with `--cov`; regenerated SVG snapshots and aspect fixtures reflect the tighter orb defaults.
+-   All `examples/` scripts were executed while drafting these notes to ensure the published documentation remains runnable.
 
 ## Useful resources
-- Detailed documentation: `site-docs/`
-- Upgrade quickstart: see the *Migration Guide* inside `README.md`
-- Issues & support: [GitHub](https://github.com/g-battaglia/kerykeion)
+
+-   Detailed documentation: `site-docs/`
+-   Upgrade quickstart: see the _Migration Guide_ inside `README.md`
+-   Issues & support: [GitHub](https://github.com/g-battaglia/kerykeion)
 
 Many thanks to the community for the steady v5 beta feedback: this release is production-ready and lays the groundwork for advanced modules (web APIs, automation, AI integration) powered by a modern, data-first core.
