--- a/release_notes/v5.5.0.md
+++ b/release_notes/v5.5.0.md
@@ -1,10 +1,29 @@
 # Release Notes v5.5.0
 
-## Brief Recap
+## Highlights
 
--   Introduced **`next_return_from_date`** method to allow precise return calculations from a specific day, month, and year.
--   Added **`day` parameter validation** using `calendar.monthrange`.
--   Added **Aspect Icons on Chart Lines**: New `show_aspect_icons` option in `ChartDrawer` (default `True`) displays the aspect symbol at the center of aspect lines. Includes collision detection to prevent clutter.
-    d compatibility but will be removed in a future major version.
+-   **Planetary returns**: added `PlanetaryReturnFactory.next_return_from_date(year, month, day=1, *, return_type=...)` for date-based searches (useful when multiple Lunar Returns can happen within the same month).
+-   **Validation**: the `day` parameter is validated via `calendar.monthrange` (e.g. rejects `2024-02-30`) and raises `KerykeionException` on invalid input.
+-   **Charts**: added **aspect icons** on aspect lines (collision-aware) with `ChartDrawer(show_aspect_icons=...)` (default `True`).
+-   **Charts API**: `kerykeion.charts.charts_utils.draw_aspect_line(...)` now accepts `show_aspect_icon`, `rendered_icon_positions` and `icon_collision_threshold` for finer control when rendering aspects manually.
 
-**Upgrade Path**: Replace calls to `next_return_from_month_and_year(year, month, return_type)` with `next_return_from_date(year, month, 1, return_type=return_type)` or specify the desired `day`.
+## Deprecations & Upgrade Path
+
+-   `PlanetaryReturnFactory.next_return_from_year(...)` is **deprecated** (emits `DeprecationWarning`); replace with `next_return_from_date(year, 1, 1, return_type=...)`.
+-   `PlanetaryReturnFactory.next_return_from_month_and_year(...)` is **deprecated** (emits `DeprecationWarning`); replace with `next_return_from_date(year, month, 1, return_type=...)`.
+-   Both deprecated methods are kept for backward compatibility and will be removed in a future major release.
+-   Docs and examples were updated accordingly (README + `site/docs`).
+
+## Examples
+
+```python
+# Solar Return: search starting from a specific date
+solar_return = factory.next_return_from_date(1964, 10, 1, return_type="Solar")
+
+# Lunar Returns: shift the start day to find later returns in the same month
+first_lr = factory.next_return_from_date(2024, 1, 1, return_type="Lunar")
+second_lr = factory.next_return_from_date(2024, 1, 20, return_type="Lunar")
+
+# Disable aspect icons in SVG charts (restores cleaner/legacy-looking aspect lines)
+drawer = ChartDrawer(chart_data=chart_data, show_aspect_icons=False)
+```
