--- a/release_notes/v5.5.0.md
+++ b/release_notes/v5.5.0.md
@@ -4,7 +4,7 @@
 
 -   **Planetary returns**: added `PlanetaryReturnFactory.next_return_from_date(year, month, day=1, *, return_type=...)` for date-based searches (useful when multiple Lunar Returns can happen within the same month).
 -   **Validation**: the `day` parameter is validated via `calendar.monthrange` (e.g. rejects `2024-02-30`) and raises `KerykeionException` on invalid input.
--   **Charts**: added **aspect icons** on aspect lines (collision-aware) with `ChartDrawer(show_aspect_icons=...)` (default `True`).
+-   **Charts**: Added **Aspect Icons on Chart Lines**: New `show_aspect_icons` option in `ChartDrawer` (default `True`) displays the aspect symbol at the center of aspect lines. Includes collision detection for same aspect types to prevent clutter while allowing different aspect types to overlap.
 -   **Charts API**: `kerykeion.charts.charts_utils.draw_aspect_line(...)` now accepts `show_aspect_icon`, `rendered_icon_positions` and `icon_collision_threshold` for finer control when rendering aspects manually.
 
 ## Deprecations & Upgrade Path
